[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScenes/HighScores.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Backgrounds/Main_Menu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="HighScores" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
expand = true

[node name="ScoreBoard" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreBoard"]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="LabelTitle" type="Label" parent="ScoreBoard/VBoxContainer"]
margin_right = 784.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "High Scores"

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreBoard/VBoxContainer"]
margin_top = 59.0
margin_right = 784.0
margin_bottom = 230.0

[node name="LabelNames" type="Label" parent="ScoreBoard/VBoxContainer/HBoxContainer"]
margin_right = 378.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Placeholder Name
Placeholder Name
Placeholder Name"

[node name="LabelScores" type="Label" parent="ScoreBoard/VBoxContainer/HBoxContainer"]
margin_left = 382.0
margin_right = 751.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Placeholder Score
Placeholder Score
Placeholder Score"
